--- a/#source/common-style.scss
+++ b/#source/common-style.scss
@@ -11,11 +11,15 @@ $color-9:#4b280a;
 $border: rgb(75, 40, 10, 0.8);
 $wave-1:#FFFAFA;
 $wave-2:#DCDCDC;
+$wave-3:#949494;
 $light-1:rgb(52,201,36);
 $light-2: rgb(0,255,0);
 $light-3:rgb(255,0,51);
 $light-4: rgb( 0,47,85);
 $light-5: rgb(30,144,255);
+$box-1: rgb(244,169,0);
+$box-2: rgb(254,254,34);
+$box-3:rgb(255,186,0);
 
 /*Обнуляющие стили*/
 * {
