--- a/#source/index-style.scss
+++ b/#source/index-style.scss
@@ -21,8 +21,8 @@
     transform: translateX(-150%);
   }
   100% {
-    transform: translateX(-19%);
-    width: 100wh;
+    transform: translateX(-20%);
+    width: 1500px;
     height: 100vh
   }
 }
@@ -31,33 +31,32 @@
     transform: translateY(0%);
   }
   20% {
-    transform: translateY(400px);
-  }
-  40% {
     transform: translateY(300px);
   }
-  60% {
-    transform: translateY(400px);
-  }
-  80% {
+  40% {
     transform: translateY(200px);
   }
+  60% {
+    transform: translateY(300px);
+  }
+  80% {
+    transform: translateY(100px);
+  }
   100% {
-    transform: translateY(400px) rotate(360deg);
-    opacity:0;
+    transform: translateY(300px) rotate(360deg);
   }
 }
 @keyframes gift-jump {
   0% {
     opacity:0;
-    transform: translateY(200px);
+    transform: translateY(-200vh);
   }
   20% {
     opacity: 1;
   }
   100% {
     opacity:1;
-    transform: translateY(400px);
+    transform: translateY(0px);
   }
 }
 @keyframes isVisible {
@@ -71,7 +70,17 @@
     opacity: 1;
   }
 }
-
+@keyframes light {
+  0% {
+    background-color:$wave-2;
+  }
+  50% {
+    background: $wave-3;
+  }
+  100% {
+    background-color:$wave-2;
+  }
+}
 
 .content {
   height: 100%;
@@ -88,6 +97,7 @@
 }
 
 //Кнопка
+
 .buttons__home {
   &::after {
   position:absolute;
@@ -99,21 +109,81 @@
   }
   right: 60px;
   transform: translateY(0px);
-  animation: jump 3s 6s ease-in-out forwards;
+  animation: jump 3s 10s ease-in-out forwards, light 3s 13s ease-in-out infinite;
 
   }
   .gift {
-    width: 50px;
-    height: 50px;
-    font-size: 100px;
-    padding: 5px;
-    position: relative;
-    opacity:0;
-   left: 1100px;
-    transform: translateY(200px) rotate(360deg);
-    animation: gift-jump 1s 8s ease-in-out forwards;
-  z-index:500;
+      position: absolute;
+      top: 400px;
+      left: 1100px;
+      perspective: 1000px;
+      perspective-origin: center -5em;
+      animation: gift-jump 3s 5s ease-in-out forwards;
+      z-index:500;
+      transform: translateY(-200vh);
 
+    .box__side,
+    .gift__container {
+      width: 8em;
+      height: 8em;
+      }
+    
+    .gift__container {
+      transform-style: preserve-3d;
+      animation: rotate 10s infinite linear;
+      position: relative;
+      }
+    
+    .box__side {
+      position: absolute;
+      width: 8em;
+      height: 8em;;
+      }
+    
+    .box__back {
+      transform: translateZ(-4em);
+      background: linear-gradient(90deg,$box-3 0%, $box-3 38%, rgba(97,0,23,1) 39%, rgba(255,0,36,1) 40%, rgba(255,0,36,1) 52%, rgba(97,0,23,1) 53%, $box-3 54%, $box-3 100%);;
+      
+      }
+    
+    .box__left {
+      transform: translateX(-4em) rotateY(90deg);
+      background: linear-gradient(90deg,$box-3 0%, $box-3 38%, rgba(97,0,23,1) 39%, rgba(255,0,36,1) 40%, rgba(255,0,36,1) 52%, rgba(97,0,23,1) 53%, $box-3 54%, $box-3 100%);;
+      
+      }
+    
+    .box__right {
+      transform: translateX(4em) rotateY(90deg);
+      background: linear-gradient(90deg,$box-3 0%, $box-3 38%, rgba(97,0,23,1) 39%, rgba(255,0,36,1) 40%, rgba(255,0,36,1) 52%, rgba(97,0,23,1) 53%, $box-3 54%, $box-3 100%);;
+      }
+    
+    .box__top {
+      transform: translateY(-4em) rotateX(90deg);
+      background-color: rgb(255,244,0);
+      background: 
+        linear-gradient(90deg, rgba(255,244,0,0) 0%, rgba(254,254,0,0) 41%, rgba(97,0,23,1) 43%, rgba(255,0,36,1) 45%, rgba(255,0,36,1) 55%, rgba(97,0,23,1) 59%, rgba(254,254,0,0) 60%, rgba(255,244,0,0) 100%),
+        linear-gradient(180deg, rgba(255,244,0,1) 0%, rgba(254,255,0,1) 40%, rgba(97,0,23,1) 43%, rgba(255,0,36,1) 45%, rgba(255,0,36,1) 55%, rgba(97,0,23,1) 59%, rgba(254,254,0,1) 60%, rgba(255,244,0,1) 100%);
+      }
+    .box__bottom {
+      transform: translateY(4em) rotateX(90deg);
+      background: $box-2;
+      }
+    .box__front {
+      transform: translateZ(4em);
+      background: $color-3;
+      background: linear-gradient(90deg, $color-3 0%, $color-3 38%, rgba(97,0,23,1) 39%, rgba(255,0,36,1) 40%, rgba(255,0,36,1) 52%, rgba(97,0,23,1) 53%, $color-3 54%, rgba(255,244,0,1) 100%);
+    }
+    @keyframes rotate {
+      100% {
+        transform: rotateY(360deg);
+      }
+    }
+    
+      @keyframes rotate {
+        100% {
+          transform: rotateY(360deg);
+        }
+      }
   &::before {
     position: absolute;
     content: 'Кликни сюда:)';
@@ -184,8 +254,9 @@
   animation: toRight 2s 4s ease-in-out;
   animation-fill-mode:forwards;
   z-index: 1;
-  width: 100%;
-
+  width: 100vw;
+  background: rgb(255,243,145);
+background: linear-gradient(180deg, rgba(255,243,145,1) 0%, rgba(255,243,145,1) 59%, rgba(115,72,27,1) 60%, rgba(3,3,3,1) 62%, rgba(115,72,27,1) 62%, rgba(3,3,3,1) 66%, rgba(115,72,27,1) 66%, rgba(3,3,3,1) 70%, rgba(115,72,27,1) 70%, rgba(3,3,3,1) 75%, rgba(115,72,27,1) 75%, rgba(3,3,3,1) 79%, rgba(115,72,27,1) 79%, rgba(3,3,3,1) 84%, rgba(115,72,27,1) 84%, rgba(3,3,3,1) 89%, rgba(115,72,27,1) 89%, rgba(3,3,3,1) 95%, rgba(115,72,27,1) 95%, rgba(3,3,3,1) 100%, rgba(115,72,27,1) 100%);
 }
 .slide-7 img {
   width: 1440px;
