--- a/css/index-style.css
+++ b/css/index-style.css
@@ -151,20 +151,24 @@ nav, footer, header {
 }
 @-webkit-keyframes toBottom {
   0% {
+    opacity: 0;
     -webkit-transform: translateY(-250%);
             transform: translateY(-250%);
   }
   100% {
+    opacity: 1;
     -webkit-transform: translateY(40%);
             transform: translateY(40%);
   }
 }
 @keyframes toBottom {
   0% {
+    opacity: 0;
     -webkit-transform: translateY(-250%);
             transform: translateY(-250%);
   }
   100% {
+    opacity: 1;
     -webkit-transform: translateY(40%);
             transform: translateY(40%);
   }
@@ -175,10 +179,10 @@ nav, footer, header {
             transform: translateX(-150%);
   }
   100% {
-    -webkit-transform: translateX(-20%);
-            transform: translateX(-20%);
-    width: 1500px;
-    height: 100vh;
+    -webkit-transform: translateX(-18%);
+            transform: translateX(-18%);
+    width: 1700px;
+    height: 100%;
   }
 }
 @keyframes toRight {
@@ -187,10 +191,10 @@ nav, footer, header {
             transform: translateX(-150%);
   }
   100% {
-    -webkit-transform: translateX(-20%);
-            transform: translateX(-20%);
-    width: 1500px;
-    height: 100vh;
+    -webkit-transform: translateX(-18%);
+            transform: translateX(-18%);
+    width: 1700px;
+    height: 100%;
   }
 }
 @-webkit-keyframes jump {
@@ -319,6 +323,26 @@ nav, footer, header {
     background-color: #DCDCDC;
   }
 }
+@-webkit-keyframes lights-fall {
+  0% {
+    -webkit-transform: translateY(-150vh);
+            transform: translateY(-150vh);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+@keyframes lights-fall {
+  0% {
+    -webkit-transform: translateY(-150vh);
+            transform: translateY(-150vh);
+  }
+  100% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
 .content {
   height: 100%;
   width: 100%;
@@ -348,7 +372,7 @@ nav, footer, header {
 .gift {
   position: absolute;
   top: 400px;
-  left: 1100px;
+  left: 1250px;
   -webkit-perspective: 1000px;
           perspective: 1000px;
   -webkit-perspective-origin: center -5em;
@@ -461,11 +485,11 @@ nav, footer, header {
 }
 
 .slide {
-  position: fixed;
   top: 40px;
   left: 250px;
   opacity: 0;
   z-index: 10;
+  position: fixed;
 }
 
 .slide img {
@@ -509,30 +533,66 @@ nav, footer, header {
 }
 
 .slide-6 {
-  -webkit-animation: start 4s 2s ease-in-out;
-          animation: start 4s 2s ease-in-out;
+  -webkit-animation: toBottom 2s 3s ease-in-out;
+          animation: toBottom 2s 3s ease-in-out;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
+  width: 300px;
+  -webkit-transform: translateY(-250%);
+          transform: translateY(-250%);
+  top: 70px;
+  left: 600px;
+}
+.slide-6__tree--1, .slide-6__tree--2 {
+  margin: 0 auto;
+}
+.slide-6__tree--1 {
+  position: relative;
+  width: 0;
+  height: 0;
+  border-left: 100px solid transparent;
+  border-right: 100px solid transparent;
+  border-bottom: 120px solid rgb(1, 141, 1);
+  border-radius: 40px;
+  z-index: 22;
+}
+.slide-6__tree--1:nth-child(2) {
+  position: relative;
+  margin-top: -30px;
+  border-left-width: 110px;
+  border-right-width: 110px;
+  border-bottom-width: 140px;
+  border-bottom: 115px solid rgb(2, 121, 2);
+  z-index: 21;
+}
+.slide-6__tree--1:nth-child(3) {
+  position: relative;
+  margin-top: -20px;
+  border-left-width: 140px;
+  border-right-width: 140px;
+  border-bottom-width: 180px;
+  border-bottom: 130px solid rgb(1, 88, 1);
+  z-index: 19;
+}
+.slide-6__tree--2 {
+  width: 40px;
+  height: 45px;
+  background-color: rgb(80, 38, 8);
 }
 
 .slide-7 {
   -webkit-transform: translateX(-150%);
           transform: translateX(-150%);
   opacity: 1;
-  -webkit-animation: toRight 2s 4s ease-in-out;
-          animation: toRight 2s 4s ease-in-out;
+  -webkit-animation: toRight 2s 2s ease-in-out;
+          animation: toRight 2s 2s ease-in-out;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
   z-index: 1;
-  width: 100vw;
+  width: 1500px;
   background: rgb(255, 243, 145);
   background: -webkit-gradient(linear, left top, left bottom, from(rgb(255, 243, 145)), color-stop(59%, rgb(255, 243, 145)), color-stop(60%, rgb(115, 72, 27)), color-stop(62%, rgb(3, 3, 3)), color-stop(62%, rgb(115, 72, 27)), color-stop(66%, rgb(3, 3, 3)), color-stop(66%, rgb(115, 72, 27)), color-stop(70%, rgb(3, 3, 3)), color-stop(70%, rgb(115, 72, 27)), color-stop(75%, rgb(3, 3, 3)), color-stop(75%, rgb(115, 72, 27)), color-stop(79%, rgb(3, 3, 3)), color-stop(79%, rgb(115, 72, 27)), color-stop(84%, rgb(3, 3, 3)), color-stop(84%, rgb(115, 72, 27)), color-stop(89%, rgb(3, 3, 3)), color-stop(89%, rgb(115, 72, 27)), color-stop(95%, rgb(3, 3, 3)), color-stop(95%, rgb(115, 72, 27)), color-stop(100%, rgb(3, 3, 3)), to(rgb(115, 72, 27)));
   background: linear-gradient(180deg, rgb(255, 243, 145) 0%, rgb(255, 243, 145) 59%, rgb(115, 72, 27) 60%, rgb(3, 3, 3) 62%, rgb(115, 72, 27) 62%, rgb(3, 3, 3) 66%, rgb(115, 72, 27) 66%, rgb(3, 3, 3) 70%, rgb(115, 72, 27) 70%, rgb(3, 3, 3) 75%, rgb(115, 72, 27) 75%, rgb(3, 3, 3) 79%, rgb(115, 72, 27) 79%, rgb(3, 3, 3) 84%, rgb(115, 72, 27) 84%, rgb(3, 3, 3) 89%, rgb(115, 72, 27) 89%, rgb(3, 3, 3) 95%, rgb(115, 72, 27) 95%, rgb(3, 3, 3) 100%, rgb(115, 72, 27) 100%);
-}
-
-.slide-7 img {
-  width: 1440px;
-  height: 100%;
 }
 
 .slide-8 {
@@ -546,9 +606,91 @@ nav, footer, header {
           animation-fill-mode: forwards;
 }
 
-.slide-8 img {
-  width: 200px;
-  height: 300px;
+.lightrope-tree__item {
+  -webkit-transform: translateY(-150vh);
+          transform: translateY(-150vh);
+  position: relative;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: 1px solid #25330F;
+  display: block;
+  border-radius: 50%;
+  -webkit-animation: lights-fall 3s 5s ease-in-out forwards;
+          animation: lights-fall 3s 5s ease-in-out forwards;
+  z-index: 1000;
+}
+.lightrope-tree__item:before {
+  content: "";
+  position: absolute;
+  background: #222;
+  width: 10px;
+  height: 9.33333px;
+  border-radius: 3px;
+  top: -7px;
+  left: 13px;
+}
+.lightrope-tree__item:nth-child(2)::before, .lightrope-tree__item:nth-child(7)::before, .lightrope-tree__item:nth-child(8)::before {
+  left: 8px;
+}
+.lightrope-tree__item:nth-child(4)::before {
+  left: 3px;
+}
+.lightrope-tree__item:nth-child(1) {
+  width: 40px;
+  height: 40px;
+  background-color: rgb(243, 218, 11);
+  top: 120px;
+  left: 70px;
+}
+.lightrope-tree__item:nth-child(2) {
+  width: 30px;
+  height: 30px;
+  background-color: #800000;
+  top: 70px;
+  left: 20px;
+}
+.lightrope-tree__item:nth-child(3) {
+  width: 40px;
+  height: 40px;
+  background-color: rgb(52, 201, 36);
+  top: 90px;
+  left: 10px;
+}
+.lightrope-tree__item:nth-child(4) {
+  width: 20px;
+  height: 20px;
+  background-color: rgb(30, 144, 255);
+  top: 120px;
+  left: 30px;
+}
+.lightrope-tree__item:nth-child(5) {
+  width: 40px;
+  height: 40px;
+  background-color: rgb(0, 47, 85);
+  top: 70px;
+  left: 65px;
+}
+.lightrope-tree__item:nth-child(6) {
+  width: 40px;
+  height: 40px;
+  background-color: #800000;
+  top: 125px;
+  left: 55px;
+}
+.lightrope-tree__item:nth-child(7) {
+  width: 30px;
+  height: 30px;
+  background-color: rgb(254, 254, 34);
+  top: 100px;
+  left: 10px;
+}
+.lightrope-tree__item:nth-child(8) {
+  width: 30px;
+  height: 30px;
+  background-color: rgb(0, 47, 85);
+  top: 90px;
+  left: 90px;
 }
 
 .slide-9 {
