--- a/css/index-style.css
+++ b/css/index-style.css
@@ -615,10 +615,10 @@ nav, footer, header {
   position: absolute;
   top: 35%;
   left: 50%;
-  width: 50%;
+  width: 55%;
   height: 50%;
   background: var(--suit);
-  border-radius: 100%/150% 150% 25% 25%;
+  border-radius: 130%/130% 140% 50% 50%;
   -webkit-transform: translate(-50%, 0);
           transform: translate(-50%, 0);
   background-image: radial-gradient(circle at 50% -50%, transparent 75%, var(--belt) 0 83%, transparent 0 92.5%, white 93%), -webkit-gradient(linear, left top, right top, color-stop(42%, transparent), color-stop(43%, white), color-stop(58%, transparent));
@@ -659,28 +659,29 @@ nav, footer, header {
 }
 .santa__arms {
   position: absolute;
-  top: 37%;
+  top: 40%;
   left: 50%;
   -webkit-transform: translate(-50%, 0);
           transform: translate(-50%, 0);
-  width: 65%;
+  width: 75%;
   height: 40%;
   background: var(--suit);
-  border-radius: 100%/170% 170% 25% 25%;
+  border-radius: 60%/180% 180% 25% 25%;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(20%, transparent), to(rgba(0, 0, 0, 0.925)));
   background-image: linear-gradient(transparent 20%, rgba(0, 0, 0, 0.925));
   border: 2px solid black;
+  border-bottom: 2px solid white;
 }
 .santa__hands {
   position: absolute;
-  top: 70%;
-  left: 18%;
+  top: 73%;
+  left: 13%;
   width: 13%;
   height: 13%;
   background: black;
   -webkit-box-shadow: 11em 0 black;
-          box-shadow: 11em 0 black;
-  border-radius: 50%;
+  box-shadow: 13em 0 black;
+  border-radius: 60%;
 }
 .santa__leg {
   position: absolute;
@@ -763,10 +764,25 @@ nav, footer, header {
   border-bottom: 130px solid rgb(1, 88, 1);
   z-index: 19;
 }
+.tree__leaves:nth-child(3)::after {
+  content: "";
+  position: absolute;
+  border-radius: 30%;
+  background-color: black;
+  opacity: 0.5;
+  width: 127px;
+  height: 30px;
+  top: 10em;
+  left: -5em;
+  z-index: 17;
+}
 .tree__trunk {
+  position: relative;
   width: 40px;
   height: 45px;
   background-color: rgb(80, 38, 8);
+  border: 2px solid black;
+  z-index: 19;
 }
 
 .background {
