--- a/#source/calendar-style.scss
+++ b/#source/calendar-style.scss
@@ -283,6 +283,67 @@
       animation: snowmen 300ms 4s ease-in-out;
       animation-fill-mode: forwards;
    }
+   &__before {
+   content:"";
+  display: block;
+  position: absolute;
+  width: 60vmin;
+  height: 72vmin;
+  bottom: 3vmin;
+  left: 50%;
+  box-shadow:
+    0 -19vmin 0 -18vmin,
+    0 -26vmin 0 -22vmin #837,
+    0 -40vmin 0 -22vmin;
+  border-radius: 18.5vmin 18.5vmin 0 0;
+  transform-origin: top center;
+  transform: translate(-50%, 0) rotate(3deg);
+  background-image:
+    linear-gradient(60deg, transparent 45%, brown 0 50%, transparent 0),
+    linear-gradient(-64deg, transparent 45%, brown 0 50%, transparent 0),
+    linear-gradient(-60deg, transparent 45%, brown 0 50%, transparent 0),
+    linear-gradient(-50deg, transparent 45%, brown 0 54%, transparent 0),
+    linear-gradient(70deg, transparent 45%, brown 0 53%, transparent 0),
+    linear-gradient(23deg, orange 20%, transparent 0),
+    linear-gradient(-88deg, transparent 42%, maroon 0 50%, transparent 0),
+    linear-gradient(75deg, transparent 45%, maroon 0 50%, transparent 0),
+    linear-gradient(85deg, transparent 45%, maroon 0 50%, transparent 0),
+    linear-gradient(95deg, transparent 45%, maroon 0 50%, transparent 0),
+    linear-gradient(110deg, transparent 45%, maroon 0 48%, transparent 0),
+    linear-gradient(80deg, transparent 45%, maroon 0 48%, transparent 0),
+    linear-gradient(102deg, transparent 45%, maroon 0 51%, transparent 0)
+    ;
+  background-size: 
+    20% 50%,
+    18% 45%,
+    9% 11%,
+    9% 11%,
+    9% 11%,
+    16% 20%,
+    22% 65%,
+    20% 20%,
+    20% 25%,
+    25% 20%,
+    18% 20%,
+    22% 22%,
+    18% 21%
+    ;
+  background-position: 
+    90% 50%,
+    14% 55%,
+     6% 75%,
+     5% 73%,
+    13% 75%,
+    60% 0%,
+    102% 92%,
+    100% 20%,
+    103% 15%,
+    109% 19%,
+    109% 17%,
+    102.5% 15%,
+    106% 16%
+    ;
+  background-repeat: no-repeat; }
    &::before {
       width: 120px;
       height: 120px;
