--- a/css/calendar-style.css
+++ b/css/calendar-style.css
@@ -414,353 +414,353 @@ nav, footer, header {
 }
 
 .snowflake:nth-child(1) {
-  --size: 1vw;
-  left: 17vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
+  --size: 0.6vw;
+  left: 54vw;
+  -webkit-animation: snowfall 8s linear infinite;
+          animation: snowfall 8s linear infinite;
 }
 
 .snowflake:nth-child(2) {
-  --size: 0.6vw;
-  left: 90vw;
-  -webkit-animation: snowfall 6s linear infinite;
-          animation: snowfall 6s linear infinite;
-}
-
-.snowflake:nth-child(3) {
-  --size: 1vw;
-  left: 45vw;
+  --size: 0.4vw;
+  left: 23vw;
   -webkit-animation: snowfall 12s linear infinite;
           animation: snowfall 12s linear infinite;
 }
 
+.snowflake:nth-child(3) {
+  --size: 1vw;
+  left: 15vw;
+  -webkit-animation: snowfall 14s linear infinite;
+          animation: snowfall 14s linear infinite;
+}
+
 .snowflake:nth-child(4) {
-  --size: 0.2vw;
-  left: 76vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
+  --size: 0.4vw;
+  left: 40vw;
+  -webkit-animation: snowfall 8s linear infinite;
+          animation: snowfall 8s linear infinite;
 }
 
 .snowflake:nth-child(5) {
-  --size: 0.6vw;
-  left: 4vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
+  --size: 0.8vw;
+  left: 78vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
 }
 
 .snowflake:nth-child(6) {
   --size: 0.2vw;
-  left: 89vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
-}
-
-.snowflake:nth-child(7) {
-  --size: 1vw;
-  left: 5vw;
+  left: 76vw;
   -webkit-animation: snowfall 11s linear infinite;
           animation: snowfall 11s linear infinite;
 }
 
+.snowflake:nth-child(7) {
+  --size: 0.2vw;
+  left: 1vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
+}
+
 .snowflake:nth-child(8) {
-  --size: 0.8vw;
-  left: 88vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
+  --size: 0.6vw;
+  left: 72vw;
+  -webkit-animation: snowfall 15s linear infinite;
+          animation: snowfall 15s linear infinite;
 }
 
 .snowflake:nth-child(9) {
-  --size: 0.2vw;
-  left: 2vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
+  --size: 0.8vw;
+  left: 57vw;
+  -webkit-animation: snowfall 9s linear infinite;
+          animation: snowfall 9s linear infinite;
 }
 
 .snowflake:nth-child(10) {
-  --size: 0.6vw;
-  left: 48vw;
+  --size: 0.4vw;
+  left: 43vw;
   -webkit-animation: snowfall 13s linear infinite;
           animation: snowfall 13s linear infinite;
 }
 
 .snowflake:nth-child(11) {
-  --size: 0.2vw;
-  left: 23vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
+  --size: 0.4vw;
+  left: 14vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
 }
 
 .snowflake:nth-child(12) {
-  --size: 0.4vw;
-  left: 13vw;
-  -webkit-animation: snowfall 6s linear infinite;
-          animation: snowfall 6s linear infinite;
+  --size: 0.6vw;
+  left: 7vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
 }
 
 .snowflake:nth-child(13) {
-  --size: 0.4vw;
-  left: 75vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
+  --size: 1vw;
+  left: 39vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
 }
 
 .snowflake:nth-child(14) {
-  --size: 1vw;
-  left: 30vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
+  --size: 0.8vw;
+  left: 55vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
 }
 
 .snowflake:nth-child(15) {
-  --size: 0.2vw;
-  left: 36vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
+  --size: 0.8vw;
+  left: 24vw;
+  -webkit-animation: snowfall 14s linear infinite;
+          animation: snowfall 14s linear infinite;
 }
 
 .snowflake:nth-child(16) {
-  --size: 0.4vw;
-  left: 44vw;
+  --size: 0.8vw;
+  left: 58vw;
   -webkit-animation: snowfall 15s linear infinite;
           animation: snowfall 15s linear infinite;
 }
 
 .snowflake:nth-child(17) {
-  --size: 0.2vw;
-  left: 92vw;
+  --size: 0.6vw;
+  left: 82vw;
   -webkit-animation: snowfall 13s linear infinite;
           animation: snowfall 13s linear infinite;
 }
 
 .snowflake:nth-child(18) {
-  --size: 0.6vw;
-  left: 48vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
+  --size: 0.8vw;
+  left: 44vw;
+  -webkit-animation: snowfall 9s linear infinite;
+          animation: snowfall 9s linear infinite;
 }
 
 .snowflake:nth-child(19) {
-  --size: 0.2vw;
-  left: 9vw;
-  -webkit-animation: snowfall 14s linear infinite;
-          animation: snowfall 14s linear infinite;
+  --size: 1vw;
+  left: 94vw;
+  -webkit-animation: snowfall 6s linear infinite;
+          animation: snowfall 6s linear infinite;
 }
 
 .snowflake:nth-child(20) {
-  --size: 0.8vw;
-  left: 85vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
+  --size: 1vw;
+  left: 61vw;
+  -webkit-animation: snowfall 8s linear infinite;
+          animation: snowfall 8s linear infinite;
 }
 
 .snowflake:nth-child(21) {
   --size: 0.2vw;
-  left: 85vw;
+  left: 99vw;
   -webkit-animation: snowfall 11s linear infinite;
           animation: snowfall 11s linear infinite;
 }
 
 .snowflake:nth-child(22) {
   --size: 0.4vw;
-  left: 72vw;
-  -webkit-animation: snowfall 7s linear infinite;
-          animation: snowfall 7s linear infinite;
-}
-
-.snowflake:nth-child(23) {
-  --size: 0.8vw;
-  left: 42vw;
-  -webkit-animation: snowfall 7s linear infinite;
-          animation: snowfall 7s linear infinite;
-}
-
-.snowflake:nth-child(24) {
-  --size: 0.6vw;
-  left: 44vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
-}
-
-.snowflake:nth-child(25) {
-  --size: 0.4vw;
-  left: 40vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
-}
-
-.snowflake:nth-child(26) {
-  --size: 0.8vw;
-  left: 20vw;
-  -webkit-animation: snowfall 14s linear infinite;
-          animation: snowfall 14s linear infinite;
-}
-
-.snowflake:nth-child(27) {
-  --size: 0.8vw;
-  left: 80vw;
-  -webkit-animation: snowfall 12s linear infinite;
-          animation: snowfall 12s linear infinite;
-}
-
-.snowflake:nth-child(28) {
-  --size: 0.2vw;
-  left: 21vw;
-  -webkit-animation: snowfall 12s linear infinite;
-          animation: snowfall 12s linear infinite;
-}
-
-.snowflake:nth-child(29) {
-  --size: 0.6vw;
-  left: 35vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
-}
-
-.snowflake:nth-child(30) {
-  --size: 0.2vw;
-  left: 85vw;
-  -webkit-animation: snowfall 12s linear infinite;
-          animation: snowfall 12s linear infinite;
-}
-
-.snowflake:nth-child(31) {
-  --size: 0.6vw;
-  left: 11vw;
-  -webkit-animation: snowfall 12s linear infinite;
-          animation: snowfall 12s linear infinite;
-}
-
-.snowflake:nth-child(32) {
-  --size: 0.4vw;
-  left: 81vw;
-  -webkit-animation: snowfall 8s linear infinite;
-          animation: snowfall 8s linear infinite;
-}
-
-.snowflake:nth-child(33) {
-  --size: 0.6vw;
   left: 2vw;
   -webkit-animation: snowfall 12s linear infinite;
           animation: snowfall 12s linear infinite;
 }
 
-.snowflake:nth-child(34) {
-  --size: 0.8vw;
-  left: 90vw;
-  -webkit-animation: snowfall 14s linear infinite;
-          animation: snowfall 14s linear infinite;
-}
-
-.snowflake:nth-child(35) {
-  --size: 0.4vw;
-  left: 42vw;
-  -webkit-animation: snowfall 13s linear infinite;
-          animation: snowfall 13s linear infinite;
-}
-
-.snowflake:nth-child(36) {
-  --size: 0.8vw;
-  left: 9vw;
-  -webkit-animation: snowfall 12s linear infinite;
-          animation: snowfall 12s linear infinite;
-}
-
-.snowflake:nth-child(37) {
+.snowflake:nth-child(23) {
   --size: 0.2vw;
-  left: 40vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
-}
-
-.snowflake:nth-child(38) {
-  --size: 0.8vw;
-  left: 84vw;
-  -webkit-animation: snowfall 12s linear infinite;
-          animation: snowfall 12s linear infinite;
-}
-
-.snowflake:nth-child(39) {
-  --size: 0.4vw;
-  left: 24vw;
-  -webkit-animation: snowfall 9s linear infinite;
-          animation: snowfall 9s linear infinite;
-}
-
-.snowflake:nth-child(40) {
-  --size: 0.6vw;
-  left: 17vw;
-  -webkit-animation: snowfall 9s linear infinite;
-          animation: snowfall 9s linear infinite;
-}
-
-.snowflake:nth-child(41) {
-  --size: 0.6vw;
-  left: 90vw;
-  -webkit-animation: snowfall 14s linear infinite;
-          animation: snowfall 14s linear infinite;
-}
-
-.snowflake:nth-child(42) {
-  --size: 0.6vw;
-  left: 29vw;
-  -webkit-animation: snowfall 7s linear infinite;
-          animation: snowfall 7s linear infinite;
-}
-
-.snowflake:nth-child(43) {
-  --size: 0.6vw;
-  left: 99vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
-}
-
-.snowflake:nth-child(44) {
-  --size: 0.8vw;
-  left: 18vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
-}
-
-.snowflake:nth-child(45) {
-  --size: 1vw;
-  left: 29vw;
+  left: 48vw;
   -webkit-animation: snowfall 8s linear infinite;
           animation: snowfall 8s linear infinite;
 }
 
-.snowflake:nth-child(46) {
+.snowflake:nth-child(24) {
   --size: 1vw;
-  left: 1vw;
+  left: 85vw;
+  -webkit-animation: snowfall 11s linear infinite;
+          animation: snowfall 11s linear infinite;
+}
+
+.snowflake:nth-child(25) {
+  --size: 0.4vw;
+  left: 16vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
+}
+
+.snowflake:nth-child(26) {
+  --size: 0.8vw;
+  left: 13vw;
+  -webkit-animation: snowfall 8s linear infinite;
+          animation: snowfall 8s linear infinite;
+}
+
+.snowflake:nth-child(27) {
+  --size: 0.2vw;
+  left: 15vw;
+  -webkit-animation: snowfall 13s linear infinite;
+          animation: snowfall 13s linear infinite;
+}
+
+.snowflake:nth-child(28) {
+  --size: 0.4vw;
+  left: 79vw;
   -webkit-animation: snowfall 9s linear infinite;
           animation: snowfall 9s linear infinite;
 }
 
-.snowflake:nth-child(47) {
+.snowflake:nth-child(29) {
+  --size: 1vw;
+  left: 80vw;
+  -webkit-animation: snowfall 14s linear infinite;
+          animation: snowfall 14s linear infinite;
+}
+
+.snowflake:nth-child(30) {
+  --size: 0.6vw;
+  left: 86vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
+}
+
+.snowflake:nth-child(31) {
+  --size: 0.2vw;
+  left: 66vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
+}
+
+.snowflake:nth-child(32) {
+  --size: 0.4vw;
+  left: 93vw;
+  -webkit-animation: snowfall 9s linear infinite;
+          animation: snowfall 9s linear infinite;
+}
+
+.snowflake:nth-child(33) {
+  --size: 0.6vw;
+  left: 77vw;
+  -webkit-animation: snowfall 13s linear infinite;
+          animation: snowfall 13s linear infinite;
+}
+
+.snowflake:nth-child(34) {
+  --size: 0.2vw;
+  left: 60vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
+}
+
+.snowflake:nth-child(35) {
+  --size: 0.6vw;
+  left: 90vw;
+  -webkit-animation: snowfall 9s linear infinite;
+          animation: snowfall 9s linear infinite;
+}
+
+.snowflake:nth-child(36) {
   --size: 0.8vw;
-  left: 46vw;
-  -webkit-animation: snowfall 15s linear infinite;
-          animation: snowfall 15s linear infinite;
+  left: 66vw;
+  -webkit-animation: snowfall 9s linear infinite;
+          animation: snowfall 9s linear infinite;
+}
+
+.snowflake:nth-child(37) {
+  --size: 0.4vw;
+  left: 26vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
+}
+
+.snowflake:nth-child(38) {
+  --size: 0.4vw;
+  left: 63vw;
+  -webkit-animation: snowfall 13s linear infinite;
+          animation: snowfall 13s linear infinite;
+}
+
+.snowflake:nth-child(39) {
+  --size: 0.8vw;
+  left: 3vw;
+  -webkit-animation: snowfall 8s linear infinite;
+          animation: snowfall 8s linear infinite;
+}
+
+.snowflake:nth-child(40) {
+  --size: 0.4vw;
+  left: 72vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
+}
+
+.snowflake:nth-child(41) {
+  --size: 0.6vw;
+  left: 85vw;
+  -webkit-animation: snowfall 12s linear infinite;
+          animation: snowfall 12s linear infinite;
+}
+
+.snowflake:nth-child(42) {
+  --size: 0.4vw;
+  left: 37vw;
+  -webkit-animation: snowfall 9s linear infinite;
+          animation: snowfall 9s linear infinite;
+}
+
+.snowflake:nth-child(43) {
+  --size: 0.6vw;
+  left: 97vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
+}
+
+.snowflake:nth-child(44) {
+  --size: 0.8vw;
+  left: 37vw;
+  -webkit-animation: snowfall 8s linear infinite;
+          animation: snowfall 8s linear infinite;
+}
+
+.snowflake:nth-child(45) {
+  --size: 0.4vw;
+  left: 81vw;
+  -webkit-animation: snowfall 9s linear infinite;
+          animation: snowfall 9s linear infinite;
+}
+
+.snowflake:nth-child(46) {
+  --size: 1vw;
+  left: 96vw;
+  -webkit-animation: snowfall 7s linear infinite;
+          animation: snowfall 7s linear infinite;
+}
+
+.snowflake:nth-child(47) {
+  --size: 0.6vw;
+  left: 72vw;
+  -webkit-animation: snowfall 10s linear infinite;
+          animation: snowfall 10s linear infinite;
 }
 
 .snowflake:nth-child(48) {
-  --size: 0.4vw;
-  left: 33vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
+  --size: 0.2vw;
+  left: 50vw;
+  -webkit-animation: snowfall 6s linear infinite;
+          animation: snowfall 6s linear infinite;
 }
 
 .snowflake:nth-child(49) {
   --size: 0.4vw;
-  left: 11vw;
-  -webkit-animation: snowfall 9s linear infinite;
-          animation: snowfall 9s linear infinite;
+  left: 94vw;
+  -webkit-animation: snowfall 12s linear infinite;
+          animation: snowfall 12s linear infinite;
 }
 
 .snowflake:nth-child(50) {
   --size: 0.8vw;
-  left: 38vw;
-  -webkit-animation: snowfall 10s linear infinite;
-          animation: snowfall 10s linear infinite;
+  left: 29vw;
+  -webkit-animation: snowfall 12s linear infinite;
+          animation: snowfall 12s linear infinite;
 }
 
 .circle-1, .circle-2, .circle-3 {
@@ -879,6 +879,26 @@ nav, footer, header {
           animation: snowmen 300ms 4s ease-in-out;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
+}
+.circle-3__before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 60vmin;
+  height: 72vmin;
+  bottom: 3vmin;
+  left: 50%;
+  -webkit-box-shadow: 0 -19vmin 0 -18vmin, 0 -26vmin 0 -22vmin #837, 0 -40vmin 0 -22vmin;
+          box-shadow: 0 -19vmin 0 -18vmin, 0 -26vmin 0 -22vmin #837, 0 -40vmin 0 -22vmin;
+  border-radius: 18.5vmin 18.5vmin 0 0;
+  -webkit-transform-origin: top center;
+          transform-origin: top center;
+  -webkit-transform: translate(-50%, 0) rotate(3deg);
+          transform: translate(-50%, 0) rotate(3deg);
+  background-image: linear-gradient(60deg, transparent 45%, brown 0 50%, transparent 0), linear-gradient(-64deg, transparent 45%, brown 0 50%, transparent 0), linear-gradient(-60deg, transparent 45%, brown 0 50%, transparent 0), linear-gradient(-50deg, transparent 45%, brown 0 54%, transparent 0), linear-gradient(70deg, transparent 45%, brown 0 53%, transparent 0), linear-gradient(23deg, orange 20%, transparent 0), linear-gradient(-88deg, transparent 42%, maroon 0 50%, transparent 0), linear-gradient(75deg, transparent 45%, maroon 0 50%, transparent 0), linear-gradient(85deg, transparent 45%, maroon 0 50%, transparent 0), linear-gradient(95deg, transparent 45%, maroon 0 50%, transparent 0), linear-gradient(110deg, transparent 45%, maroon 0 48%, transparent 0), linear-gradient(80deg, transparent 45%, maroon 0 48%, transparent 0), linear-gradient(102deg, transparent 45%, maroon 0 51%, transparent 0);
+  background-size: 20% 50%, 18% 45%, 9% 11%, 9% 11%, 9% 11%, 16% 20%, 22% 65%, 20% 20%, 20% 25%, 25% 20%, 18% 20%, 22% 22%, 18% 21%;
+  background-position: 90% 50%, 14% 55%, 6% 75%, 5% 73%, 13% 75%, 60% 0%, 102% 92%, 100% 20%, 103% 15%, 109% 19%, 109% 17%, 102.5% 15%, 106% 16%;
+  background-repeat: no-repeat;
 }
 .circle-3::before {
   width: 120px;
